<resources>
    <string name="app_name">Housie</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="fb">FB</string>
    <string name="options">options</string>
    <string name="help">help</string>
    <string name="play">play</string>
    <string name="title_activity_board">Board</string>
</resources>
