<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/main"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/exit"
        android:background="@drawable/exit"
        android:contentDescription="@string/exit"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentLeft="false"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/fb"
        android:background="@drawable/fb"
        android:contentDescription="@string/fb"
        android:layout_alignBottom="@+id/exit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/gplus"
        android:background="@drawable/gplus"
        android:contentDescription="@string/fb"
        android:layout_above="@+id/fb"
        android:layout_alignLeft="@+id/fb"
        android:layout_alignStart="@+id/fb"
        android:layout_marginBottom="10dp"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:id="@+id/options"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/options"
        android:contentDescription="@string/options"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:id="@+id/help"
        android:layout_below="@+id/options"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/help"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/help"
        android:layout_marginLeft="20dp"
        android:visibility="invisible" />

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/play"
        android:layout_above="@+id/options"
        android:contentDescription="@string/play"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/play"
        android:layout_marginLeft="0dp" />
</RelativeLayout>
